# GL-Python-API-Requester

./: .coverage  .gitignore  README.md  main.py  pyproject.toml  requirements_dev.txt  tox.ini
.github/workflows/: tests.yml
src/gl_api_requester/: GLAPIRequester.py  __init__.py
src/gl_api_requester/dto/: DTO.py
src/gl_api_requester/dto/request/alliance/: GetAllianceDTO.py
src/gl_api_requester/dto/request/player/: GetPlayerByIdDTO.py  GetPlayerByNameDTO.py
src/gl_api_requester/dto/response/alliance/: AllianceDTO.py  AllianceEmblemDTO.py  AlliancePlayerDTO.py  AllianceWarpointsDTO.py
src/gl_api_requester/dto/response/leaderboard/: LeaderboardRivalsWonPlayerDTO.py  LeaderboardWarpointsPlayerDTO.py  LeaderboardXpFromAttackPlayerDTO.py
src/gl_api_requester/dto/response/planet/: PlanetDTO.py
src/gl_api_requester/dto/response/player/: PlayerDTO.py  PlayerPlatformIdDTO.py  PlayerStatsDTO.py
src/gl_api_requester/dto/response/status/: ServerDTO.py  ServerStatusDTO.py  StatusDTO.py
src/gl_api_requester/dto/response/user/: UserCountDTO.py
src/gl_api_requester/exception/: APIErrorException.py
tests/: test_gl_api_requester.py
